P08-Agri/Development/Sprint-4/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sproj-ingress
  namespace: sproj-app
spec:
  ingressClassName: nginx
  rules:
    - host: api.agriqual.xyz
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
